index file modified again

--- a/index.html
+++ b/index.html
@@ -5,9 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+<style>
+    .box{
+        background-color: aquamarine;
+        width: 200px;
+        height: 300px;
+    }
+</style>
 <body>
     <h1>Hello programer</h1>
     <h2>This is git bash</h2>
+    <div id="box">
+        GIT BOX
+    </div>
 
     
 </body>
